--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -386,11 +386,16 @@
 .discoverySection {
   margin-top: 80px;
   height: 1397px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .discoverySection__p {
   text-align: center;
   padding: 20px 16px 0 16px;
+  width: 100%;
+  max-width: 700px;
 }
 
 #music_alternative {
