--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -159,6 +159,8 @@
 
 .magazinSection__container {
 
+  margin-bottom: 48px;
+
 
   @include large {
     display: grid;
@@ -298,6 +300,8 @@
     justify-content: center;
     align-self: center;
 
+
+
     @include large() {
       grid-area: panel;
     }
@@ -410,7 +414,7 @@
 
   &__imgBox {
     width: 100%;
-    height: 100px;
+    height: 120px;
     justify-content: center;
     display: flex;
     align-items: center;
@@ -440,9 +444,22 @@
 
     }
 
+
+
   }
 
+  &__btn {
 
+    display: none;
+
+    @include medium {
+      display: inline-block;
+      margin-top: 150px;
+    }
+
+
+
+  }
 
   &__play {
     background-image: url("../images/Icons/detail_video_play.svg");
