--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -271,6 +271,7 @@
       width: 200px;
       height: 415px;
       margin-left: -100px;
+      top: -25%;
     }
   }
 
@@ -402,7 +403,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(5, 1fr);
-    grid-row-gap: 20px;
+    grid-row-gap: 40px;
     grid-template-areas:
     "jazz"
     "hiphop"
