--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,13 +1,14 @@
 // start with footerSection
 
 .footerSection {
-  background-color: hotpink;
+  color: #767676;
   width: 100%;
-  height: 112px;
-  background-color: $white;
-  display: flex;
-  flex-direction: column;
-  padding: 24px 15px 24px 15px;
+  display: grid;
+  grid-template-columns: 33.33% 33.33% 33.33%;;
+  grid-template-rows: 64px;
+  grid-template-areas:
+  "title icons back";
+
 
   & ul {
     list-style-type: none;
@@ -15,20 +16,36 @@
 }
 
 .footerSection__box1 {
-  display: flex;
-  height: 50%;
-  align-items: flex-end;
-  justify-content: space-around;
-  padding-bottom: 8.5px;
-  color: #767676;
+  grid-area: title;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: 1fr;
+  align-items: center;
+  width: 30%;
+  grid-gap: 20px;
+  justify-self: center;
 }
 
 .footerSection__box2 {
-  display: flex;
-  height: 50%;
-  align-items: flex-start;
-  justify-content: space-around;
-  padding-top: 8.5px;
+  grid-area: icons;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  grid-template-rows: 1fr;
+  align-items: center;
+  grid-gap: 24px;
+  width: 30%;
+  justify-self: center;
+}
+
+.footerSection__box3 {
+  width: 27%;
+  grid-area: back;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: 1fr;
+  align-items: center;
+  justify-self: center;
+  grid-gap: 12px;
 }
 
 #socialmedia_facebook, #socialmedia_instagram, #socialmedia_twitter,
