--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -4,14 +4,32 @@
   color: #767676;
   width: 100%;
   display: grid;
-  grid-template-columns: 33.33% 33.33% 33.33%;;
-  grid-template-rows: 64px;
+  grid-template-columns:  70% 30%;;
+  grid-template-rows: 56px 56px;
   grid-template-areas:
-  "title icons back";
+  "title back"
+  "icons .";
+
+
+
+  @include medium {
+    grid-template-rows: 64px;
+    grid-template-columns: 33.33% 33.33% 33.33%;
+    grid-template-areas:
+    "title icons back";
+  }
 
 
   & ul {
     list-style-type: none;
+  }
+
+  &__text {
+    display: none;
+
+    @include medium {
+      display: inline-block;
+    }
   }
 }
 
@@ -21,9 +39,14 @@
   grid-template-columns: auto auto auto;
   grid-template-rows: 1fr;
   align-items: center;
-  width: 30%;
-  grid-gap: 20px;
-  justify-self: center;
+  grid-gap: 35px;
+  justify-self: flex-end;
+
+
+  @include medium {
+    grid-gap: 20px;
+    justify-self: center;
+  }
 }
 
 .footerSection__box2 {
@@ -33,19 +56,26 @@
   grid-template-rows: 1fr;
   align-items: center;
   grid-gap: 24px;
-  width: 30%;
-  justify-self: center;
+  justify-self: flex-end;
+
+  @include medium {
+    justify-self: center;
+  }
 }
 
 .footerSection__box3 {
   width: 27%;
   grid-area: back;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto;
   grid-template-rows: 1fr;
   align-items: center;
   justify-self: center;
   grid-gap: 12px;
+
+  @include medium {
+    grid-template-columns: auto auto;
+  }
 }
 
 #socialmedia_facebook, #socialmedia_instagram, #socialmedia_twitter,
