--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -478,77 +478,70 @@
 // start with newsSection
 
 .newsSection {
+  width: 100%;
   padding: 0 16px 0 16px;
   background-color: #F0F0F0;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-bottom: 154px;
+  padding-top: 114px;
 
-  &__masonryBox {
-    column-count: 4;
-    column-gap: 20px;
-    border: 1px solid red;
+  &__container {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
   }
 
-  &.__bigBox {
-    height: 440px;
-    background-color: #FFFFFF;
-    margin-bottom: 16px;
+  &__Box {
+    width: 100%;
+    padding-top: 24px;
+
+    @include medium{
+      width: 221px;
+    }
   }
 
+  &__pic {
+    width: 100%;
+    height: 144px;
+    background-color: #00D79F;
+
+
+  }
+
+  &__content {
+    padding: 20px 16px 10px 16px;
+    background-color: $white;
+  }
+
+  &__like {
+    border-top: 1px #E5E5E5;
+    border-top: solid #E5E5E5 1px;
+    margin-top: 19px;
+    padding-top: 10px;
+    display: flex;
+  }
+
+  &__heart {
+    background-image: url("../images/Icons/detail_like_filled.svg");
+    height: 20px;
+    width: 20px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  &__qty {
+    margin-left: 7px;
+    position: relative;
+    top: 5px;
+  }
+
+  &__btn {
+    margin-top: 42px;
+  }
+
+
 }
 
-
-
-
-
-
-
-
-
-.newsSection__boxBig--img {
-  width: 100%;
-  height: 232px;
-}
-
-.newsSection__bigBox--content {
-  padding: 20px 24px 10px 24px;
-}
-
-.newsSection__bigBox--content--content {
-  border-bottom: #E5E5E5 solid 1px;
-  width: 100%;
-  background-color: #FFFFFF;
-}
-
-.newsSection__boxBig--icon {
-  padding-top: 16px;
-}
-
-.newsSection__smallBox {
-  width: 100%;
-  height: 208px;
-  background-color: #FFFFFF;
-  margin-bottom: 16px;
-}
-
-.newsSection__smallBox--content {
-  padding: 20px 24px 10px 24px;
-
-
-}
-
-.newsSection__smallBox--content--content {
-  border-bottom: #E5E5E5 solid 1px;
-  width: 100%;
-  background-color: #FFFFFF;
-}
-
-.newsSection__moreBtn--transp {
-  background: transparent;
-  border: 2px solid #000000;
-  width: 100%;
-  margin-left: 0;
-  margin-bottom: 72px;
-}
