--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -8,15 +8,16 @@
 
 
   &--show {
-    width: 375px;
+    max-width: 1600px;
+    width: 100%;
     height: 640px;
     background-color: rgba(0, 0, 0, 0.85);
     padding: 0 16px 0 16px;
     display: inline-block;
     z-index: 1;
     position: absolute;
-    right: 0;
     top: 64px;
+
   }
 }
 
@@ -35,6 +36,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 .navSection__input {
