--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -10,6 +10,7 @@
   height: 64px;
   z-index: 1;
   background-color: $white;
+  position: relative;
 
   &--changeColor {
     background-color: rgba(0, 0, 0, 0.85);
