--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -1,23 +1,38 @@
-.navSection__box {
-  position: relative;
-}
+//.navSection__box {
+//  position: relative;
+//}
 
 .navSection {
+  top: 64px;
+  position: absolute;
+  background-color: hotpink;
+  width: 100%;
+  height: 834px;
+  //display: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  display: none;
+  //
+  //&--show {
+  //  max-width: 1600px;
+  //  width: 100%;
+  //  height: 640px;
+  //  background-color: rgba(0, 0, 0, 0.85);
+  //  padding: 0 16px 0 16px;
+  //  //display: inline-block;
+  //  z-index: 1;
+  //  position: absolute;
+  //  top: 64px;
+  //
+  //}
 
-
-  &--show {
-    max-width: 1600px;
-    width: 100%;
-    height: 640px;
-    background-color: rgba(0, 0, 0, 0.85);
-    padding: 0 16px 0 16px;
-    display: inline-block;
-    z-index: 1;
-    position: absolute;
-    top: 64px;
-
+  &__BoxB {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 216px;
+    grid-template-areas:
+    "icons search";
   }
 }
 
@@ -32,11 +47,14 @@
 
 .navSection__titles {
   height: 307px;
-  padding-top: 100px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+
+  @include medium {
+    margin-top: 160px;
+  }
 }
 
 .navSection__input {
@@ -47,6 +65,13 @@
   border: none;
   border-bottom: 2px solid #D8D8D8;
   margin-top: 100px;
+
+
+  @include medium {
+    margin-top: 172px;
+    grid-area: search;
+  }
+
 }
 
 .navSection__text {
@@ -76,6 +101,10 @@
   border: none;
   background-color: transparent;
   fill: white;
+
+  @include medium {
+    grid-area: icons;
+  }
 }
 
 .navSection__ul {
@@ -83,7 +112,10 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding-top: 64px;
+
+  @include medium {
+    margin-top: 160px;
+  }
 }
 
 #socialmedia_nav
