--- a/src/scss/_layer.scss
+++ b/src/scss/_layer.scss
@@ -9,11 +9,12 @@
   top: 64px;
   position: absolute;
   background-color: rgba(0, 0, 0, 0.85);
-  width: 100%;
   height: 834px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  text-align: center;
   }
 
   &__BoxB {
@@ -41,24 +42,41 @@
 
 .navSection__title {
   color: #FFFFFF;
+  width: 100%;
+  cursor: pointer;
 
   &--1 {
     grid-area: title1;
+
+    &:hover {
+      background-color: white;
+      color: black;
+    }
   }
 
   &--2 {
     grid-area: title2;
+
+    &:hover {
+      background-color: white;
+      color: black;
+    }
   }
 
   &--3 {
     grid-area: title3;
-    justify-self: center;
+
+    &:hover {
+      background-color: white;
+      color: black;
+    }
   }
 
 }
 
 .navSection__titles {
   height: 307px;
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -68,6 +86,7 @@
   "title3";
   margin-top: 108px;
   grid-gap: 40px;
+  align-items: center;
 
   @include medium {
     margin-top: 160px;
