--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -81,7 +81,7 @@
 }
 
 
-// Typografie mobile
+// Typografie mobile and desktop
 
 h1 {
   font-size: 32px;
@@ -96,6 +96,21 @@ h1 {
   }
 
 }
+
+.titles {
+
+    font-size: 32px;
+    line-height: 40px;
+    font-family: Adelle, sans-serif;
+    color: #000000;
+    font-weight: bold;
+
+    @include large {
+      font-size: 56px;
+      line-height: 80px;
+    }
+}
+
 
 h2 {
   font-size: 24px;
