--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,5 +1,3 @@
-
-
 // start with headerSection
 
 .headerSection {
@@ -104,8 +102,6 @@
     }
 
 
-
-
   }
 
   .headerSection__Icon--navLike {
@@ -125,17 +121,11 @@
 }
 
 
-
-
-
-
 // start with navSection
 
 .headerSection__text--hide {
   //display: none;
 }
-
-
 
 
 .headerSection__Icon--loginTicket {
@@ -151,6 +141,7 @@
     width: 50%;
     height: 64px;
     border-left: #E5E5E5 1px solid;
+    color: #C2C2C2;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -162,12 +153,16 @@
 
     .headerSection__IconTicketText {
       font-size: 17px;
-      color: #C2C2C2;
       line-height: 28px;
       font-weight: bold;
       font-family: Roboto, sans-serif;
       margin-left: 12px;
       display: none;
+
+      .headerSection__IconTicketText:hover {
+        background-color: #C2C2C2;
+        color: $black100;
+      }
 
 
       @include medium {
@@ -180,6 +175,7 @@
 
   .headerSection__IconTicket:hover {
     background-color: #C2C2C2;
+    color: $black100;
   }
 
 
@@ -188,9 +184,15 @@
     height: 64px;
     display: flex;
     justify-content: center;
+    color: #C2C2C2;
     align-items: center;
     position: relative;
     cursor: pointer;
+
+    &:hover {
+      color: $black100;
+
+    }
 
 
     @include small {
@@ -200,12 +202,12 @@
 
     .headerSection__IconLoginText {
       font-size: 17px;
-      color: #C2C2C2;
       line-height: 28px;
       font-weight: bold;
       font-family: Roboto, sans-serif;
       margin-left: 12px;
       display: none;
+
 
       @include medium {
         display: inline-block;
@@ -214,22 +216,19 @@
 
 
 
+
     }
   }
 
 
-
   .headerSection__IconLogin:hover {
     background-color: #C2C2C2;
+    fill: $black100;
+
   }
 
 
-
-
 }
-
-
-
 
 
 .headerSection__IconLike {
@@ -260,6 +259,9 @@
 .navigation__login {
   fill: #C2C2C2;
 
+  &:hover {
+    fill: black;
+  }
 
 
   &--white {
@@ -275,6 +277,10 @@
 
 .navigation__ticket {
   fill: #C2C2C2;
+
+  &:hover {
+    fill: black;
+  }
 
   &--white {
     fill: #FFFFFF;
