--- a/src/scss/_overview-festivals.scss
+++ b/src/scss/_overview-festivals.scss
@@ -122,7 +122,7 @@
   }
 
   &__cardBox {
-    background-color: #00D79F;
+    background-color: white;
     height: 352px;
 
     @include medium {
@@ -147,6 +147,99 @@
       margin-left: 4px;
     }
   }
+
+// start with style the cardBoxes
+
+
+  &__pic {
+    background-color: lightslategrey;
+    width: 100%;
+    height: 232px;
+  }
+
+  &__cardBoxContent {
+    display: grid;
+    padding: 28px 24px 21px 24px;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 0 auto auto auto auto;
+    grid-template-areas:
+    "panel"
+    "info"
+    "title"
+    "content"
+    "notice";
+
+  }
+
+  &__iconPanel {
+    grid-area: panel;
+    position: relative;
+    bottom: 76px;
+    width: 48px;
+    height: 48px;
+    left: 50%;
+    margin-left: -24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &--indie {
+      background-color: $indiemint;
+
+    }
+
+    &--hiphop {
+      background-color: $HipHoppink;
+    }
+
+    &--electronic {
+      background-color: $Electronicviolett;
+    }
+
+    &--jazz {
+      background-color: $Jazzgelb;
+    }
+
+    &--poprock {
+      background-color: $PopRockblau;
+    }
+  }
+
+  &__sign {
+    fill: $white;
+  }
+
+
+  &__info {
+    grid-area: info;
+  }
+
+  &__cardTitle {
+    grid-area: title;
+
+  }
+
+  &__cardText {
+    grid-area: content;
+    margin-top: 12px;
+  }
+
+  &__noticeContainer {
+    grid-area: notice;
+    display: flex;
+    flex-direction: row;
+    margin-top: 79px;
+  }
+
+  &__noticeStar {
+    margin-right: 6px;
+  }
+
+
+
+
+
+
 
 
 
