tiles responisve finished

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -38,6 +38,7 @@
       background-color: $black100;
       color: $white;
       margin-top: 39px;
+      margin-bottom: 42px;
       border: none;
 
       @include medium {
