--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -2,7 +2,7 @@
 
 .titleSection {
   width: 100%;
-  margin-top: 10%;
+  margin-top: 68px;
   margin-bottom: 21px;
   display: flex;
   flex-direction: column;
